--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-	
+            
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
@@ -98,6 +98,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId> 
 
         </dependency> 
+        
+        <dependency>             
+            <groupId>com.google.firebase</groupId>             
+            <artifactId>firebase-admin</artifactId>             
+            <version>9.5.0</version>         
+        </dependency>
         
     </dependencies>
 
